--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-weight: bold;
 }
 
 nav a {
@@ -47,13 +48,13 @@ nav a {
 .stay-put {
   position: fixed;
   top: 0;
+  z-index: 9999;
   width: 100%;
   display: flex;
   justify-content: center;
   background-color: chartreuse;
   color: black;
   font-size: 1.25rem;
-  font-weight: bold;
   flex-wrap: wrap;
 }
 
@@ -72,16 +73,39 @@ nav a {
   margin-top: 15px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
 }
-
+ 
 .img {
   margin-left: 10%;
-  margin-right: 5%;
+  margin-right: 50px;
+  width: 50%
 }
-
-.deets {
-
+.me {
+  margin-left: 10%;
+  margin-right: 75px;
+}
+.project-details {
+  display: flex;
+  flex-direction: column; 
+  padding-top: 10px;
+  margin-right: 10%;
+  width: 50%
+}
+.deets {  
+  display: flex;
+  flex-direction: column;
+  margin-right: 10%
+}
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%
+}
+.description {
+  margin-top: 20px;
+  margin-bottom: 20px
 }
 @media (max-width: 650px) {
   .name-blast{
