--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,16 +10,26 @@ a {
   color: inherit;
   text-decoration: none;
   font-weight: bold;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 2px chartreuse;
 }
-
+a:hover {
+  color: white;
+}
+h1 {
+  letter-spacing: 1px;
+}
 nav a {
   margin-right: 5px;
   margin-left: 5px;
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: chartreuse;
+  text-shadow: 2px 2px 2px hotpink;
 }
-
+div {
+  letter-spacing: 1px;
+}
 * {
   /* box-sizing: border-box; */
   background-color: hotpink;
@@ -59,15 +69,27 @@ nav a {
 }
 
 .name-blast{
-  font-size: 4rem;
+  font-size: 10rem;
   font-weight: bold
 }
 
 .job-title {
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: bold;
+  letter-spacing: 1px;
 }
-
+.hello-world {
+  width: 50%;
+  font-size: 1.25rem;
+  line-height: 2rem;
+  letter-spacing: 1px;
+}
+#skillz {
+  width: 50%;
+  font-size: 1.25rem;
+  line-height: 2rem;
+  letter-spacing: 1px;
+}
 .content {
   width: 100%;
   margin-top: 15px;
@@ -106,6 +128,9 @@ nav a {
 .description {
   margin-top: 20px;
   margin-bottom: 20px
+}
+.bumper {
+  margin-bottom: 10px;
 }
 @media (max-width: 650px) {
   .name-blast{
