--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,11 +23,14 @@ h1 {
 h2 {
   font-size: 1.5rem;
 }
+nav {
+  padding-bottom: 15px;
+}
 nav a {
   margin-right: 15px;
   margin-left: 15px;
   padding-top: 15px;
-  padding-bottom: 15px;
+  /* padding-bottom: 15px; */
   background-color: chartreuse;
   text-shadow: 2px 2px 2px hotpink;
 }
@@ -52,7 +55,7 @@ div {
 
 .secondary {
   justify-content: flex-start;
-  padding-top: 53px
+  padding-top: 68px
 }
 
 .extraGreen {
@@ -214,6 +217,15 @@ div {
   /* .job-title {
     font-size: 1rem;
   } */
+}
+@media (max-width: 539px) {
+  .secondary {
+    padding-top: 136px
+  }
+  nav a {
+    padding-top: 10px;
+    /* padding-bottom: 10px */
+  }
 }
 
 @media (max-width: 499px) {
