added gallery carousel

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
 a {
   color: inherit;
   text-decoration: none;
@@ -13,6 +12,7 @@ a {
   letter-spacing: 1px;
   text-shadow: 2px 2px 2px chartreuse;
   font-size: 1.25rem;
+  overflow: hidden;
 }
 a:hover {
   color: white;
@@ -37,11 +37,9 @@ nav a {
 div {
   letter-spacing: 1px;
 }
-* {
-  /* box-sizing: border-box; */
+.home {
   background-color: hotpink;
 }
-
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -52,16 +50,13 @@ div {
   margin: 5px;
   width: 100%
 } 
-
 .secondary {
   justify-content: flex-start;
   padding-top: 68px
 }
-
 .extraGreen {
   color: chartreuse;
 }
-
 .stay-put {
   position: fixed;
   top: 0;
@@ -71,16 +66,13 @@ div {
   justify-content: center;
   background-color: chartreuse;
   color: black;
-  
   flex-wrap: wrap;
 }
-
 .name-blast{
   font-size: 10rem;
   font-weight: bold;
   margin-top: 68px
 }
-
 .job-title {
   font-size: 3rem;
   font-weight: bold;
@@ -106,7 +98,6 @@ div {
   flex-direction: row;
   justify-content: center;
 }
- 
 .img {
   margin-left: 10%;
   margin-right: 50px;
@@ -144,7 +135,6 @@ div {
   margin-bottom: 20px;
   line-height: 1.5rem;
   font-size: 1.15rem;
- 
 }
 .tech {
   line-height: 1.5rem;
@@ -156,6 +146,144 @@ div {
 .email {
   font-size: 1.15rem;
 }
+
+/* GALLERY STYLES */
+.main-gallery {
+  background-color: black;
+}
+/* .gallery {
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+  width: 100%
+} */
+[class^="number-slide"],
+[class*=" number-slide"] {
+  background: grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 50px;
+  color: #fff;
+  font-weight: 500;
+  height: 200px;
+}
+
+.number-slide1 {
+  background: rgb(64, 175, 255);
+  background: linear-gradient(
+    128deg,
+    rgba(64, 175, 255, 1) 0%,
+    rgba(63, 97, 255, 1) 100%
+  );
+}
+
+.number-slide2 {
+  background: rgb(255, 75, 64);
+  background: linear-gradient(
+    128deg,
+    rgba(255, 154, 63, 1) 0%,
+    rgba(255, 75, 64, 1) 100%
+  );
+}
+
+.number-slide3 {
+  background: rgb(182, 255, 64);
+  background: linear-gradient(
+    128deg,
+    rgba(182, 255, 64, 1) 0%,
+    rgba(63, 255, 71, 1) 100%
+  );
+  background: linear-gradient(
+    128deg,
+    rgba(189, 255, 83, 1) 0%,
+    rgba(43, 250, 82, 1) 100%
+  );
+}
+
+.number-slide4 {
+  background: rgb(64, 255, 242);
+  background: linear-gradient(
+    128deg,
+    rgba(64, 255, 242, 1) 0%,
+    rgba(63, 188, 255, 1) 100%
+  );
+}
+
+.number-slide5 {
+  background: rgb(255, 64, 156);
+  background: linear-gradient(
+    128deg,
+    rgba(255, 64, 156, 1) 0%,
+    rgba(255, 63, 63, 1) 100%
+  );
+}
+.number-slide6 {
+  background: rgb(64, 76, 255);
+  background: linear-gradient(
+    128deg,
+    rgba(64, 76, 255, 1) 0%,
+    rgba(174, 63, 255, 1) 100%
+  );
+}
+
+.navigation-wrapper {
+  position: relative;
+}
+
+.dots {
+  display: flex;
+  padding: 10px 0;
+  justify-content: center;
+}
+
+.dot {
+  border: none;
+  width: 10px;
+  height: 10px;
+  background: #c5c5c5;
+  border-radius: 50%;
+  margin: 0 5px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.dot:focus {
+  outline: none;
+}
+
+.dot.active {
+  background: #000;
+}
+
+.arrow {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  fill: #fff;
+  cursor: pointer;
+}
+
+.arrow--left {
+  left: 5px;
+}
+
+.arrow--right {
+  left: auto;
+  right: 5px;
+}
+
+.arrow--disabled {
+  fill: rgba(255, 255, 255, 0.5);
+}
+
 @media (max-width: 1600px) {
   .name-blast{
     font-size: 7rem;
@@ -168,11 +296,9 @@ div {
     font-weight: bold
   }
   .hello-world {
-   
     width: 90%
   }
   #skillz{
-    
     width: 90%
   }
   .content {
@@ -197,7 +323,6 @@ div {
     margin: 0px
   }
   .links {
-    
     justify-content: space-around;
   }
 }
@@ -208,13 +333,11 @@ div {
   .job-title {
     font-size: 2rem;
   }
-  
 }
 @media (max-width: 650px) {
   .name-blast{
     font-size: 3rem;
   }
-
 }
 @media (max-width: 539px) {
   #projects {
@@ -227,7 +350,6 @@ div {
     padding-top: 10px;
   }
 }
-
 @media (max-width: 499px) {
   .container{
     margin-left: 20px; 
@@ -274,7 +396,6 @@ div {
     justify-content: space-between;
   } */
 }
-
 @media (max-width: 360px) {
   .stay-put {
     font-size: 1rem;
