--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+.home {
+  background-color: hotpink;
+  display: flex;
+  flex-direction: column;
+  max-width: 100%
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -25,6 +31,7 @@ h2 {
 }
 nav {
   padding-bottom: 15px;
+  max-width: 100%
 }
 nav a {
   margin-right: 15px;
@@ -34,12 +41,21 @@ nav a {
   background-color: chartreuse;
   text-shadow: 2px 2px 2px hotpink;
 }
+.stay-put {
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  max-width: 100vw;
+  display: flex;
+  justify-content: center;
+  background-color: chartreuse;
+  color: black;
+  flex-wrap: wrap;
+}
 div {
   letter-spacing: 1px;
 }
-.home {
-  background-color: hotpink;
-}
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -47,8 +63,7 @@ div {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 5px;
-  width: 100%
+  max-width: 100vw
 } 
 .secondary {
   justify-content: flex-start;
@@ -57,17 +72,7 @@ div {
 .extraGreen {
   color: chartreuse;
 }
-.stay-put {
-  position: fixed;
-  top: 0;
-  z-index: 9999;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background-color: chartreuse;
-  color: black;
-  flex-wrap: wrap;
-}
+
 .name-blast{
   font-size: 10rem;
   font-weight: bold;
@@ -91,7 +96,7 @@ div {
   letter-spacing: 1px;
 }
 .content {
-  width: 100%;
+  max-width: 100vw;
   margin-top: 15px;
   margin-bottom: 75px;
   display: flex;
@@ -352,7 +357,7 @@ div {
 }
 @media (max-width: 499px) {
   .container{
-    margin-left: 20px; 
+    margin-left: 10px; 
   }
   .name-blast{
     font-size: 2rem;
@@ -399,6 +404,9 @@ div {
 @media (max-width: 360px) {
   .stay-put {
     font-size: 1rem;
+  }
+  .email {
+    font-size: .75rem;
   }
   /* nav a {
     margin-left: 10px;
