--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  overflow-y:scroll;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -31,7 +32,7 @@ h2 {
 }
 nav {
   padding-bottom: 15px;
-  max-width: 100%
+  width: 100%
 }
 nav a {
   margin-right: 15px;
@@ -45,7 +46,7 @@ nav a {
   position: fixed;
   top: 0;
   z-index: 9999;
-  max-width: 100vw;
+  /* max-width: 100vw; */
   display: flex;
   justify-content: center;
   background-color: chartreuse;
