--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
 .home {
   background-color: hotpink;
   display: flex;
@@ -56,7 +55,6 @@ nav a {
 div {
   letter-spacing: 1px;
 }
-
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -73,7 +71,6 @@ div {
 .extraGreen {
   color: chartreuse;
 }
-
 .name-blast{
   font-size: 10rem;
   font-weight: bold;
@@ -171,6 +168,9 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 15px;
+  max-height: 550px;
+  max-width: 550px;
 }
 /* div all pics live inside of */
 .keen-slider {
@@ -185,7 +185,8 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  max-height: 100%;
+  max-width: 100%;
 }
 .flyer {
   
