--- a/styles/globals.css
+++ b/styles/globals.css
@@ -169,12 +169,12 @@ div {
   align-items: center;
   justify-content: center;
   margin: 15px;
-  max-height: 550px;
+  /* max-height: 550px; */
   max-width: 550px;
 }
 /* div all pics live inside of */
 .keen-slider {
-  max-height: 500px;
+  /* max-height: 500px; */
   max-width: 500px;
   /* display: flex; */
 
@@ -185,7 +185,7 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-height: 100%;
+  /* max-height: 100%; */
   max-width: 100%;
 }
 .flyer {
@@ -200,10 +200,10 @@ div {
   -webkit-transform: translateY(-50%);
   fill: hotpink;
   cursor: pointer;
+  /* margin: 10px; */
 }
 .arrow--left {
   left: -5px;
-  /* right: px; */
 }
 .arrow--right {
   left: 5px;
@@ -266,6 +266,9 @@ div {
     font-size: 3rem;
   }
 }
+/* @media (max-width: 600px) {
+
+} */
 @media (max-width: 560px) {
   .gallery {
     margin-top: 100px
