--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,7 +74,7 @@ div {
   justify-content: flex-start;
   padding-top: 75px
 }
-.name-blast{
+#name-blast{
   font-size: 10rem;
   font-weight: bold;
   margin-top: 68px;
@@ -224,7 +224,7 @@ img {
 
 /* RESPONSIVE DESIGN */
 @media (max-width: 1600px) {
-  .name-blast{
+  #name-blast{
     font-size: 7rem;
     font-weight: bold
   }
@@ -253,7 +253,7 @@ img {
   
 }
 @media (max-width: 1150px) {
-  .name-blast{
+  #name-blast{
     font-size: 5rem;
     font-weight: bold
   }
@@ -315,7 +315,7 @@ img {
   }
 }
 @media (max-width: 800px) {
-  .name-blast {
+  #name-blast {
     font-size: 4rem
   }
   .job-title {
@@ -332,7 +332,7 @@ img {
   }
 }
 @media (max-width: 650px) {
-  .name-blast{
+  #name-blast{
     font-size: 3rem;
   }
 }
@@ -357,7 +357,7 @@ img {
   .container{
     margin-left: 5px; 
   }
-  .name-blast{
+  #name-blast{
     font-size: 2rem;
     font-weight: 800;
     align-self: flex-start;
@@ -414,7 +414,7 @@ img {
   }
 }
 @media (max-width: 360px) {
-  /* .name-blast {
+  /* #name-blast {
     font-size: 1rem
   } */
   .gallery {
