--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,12 +98,22 @@ div {
 #skillz-header {
   color: #FD9EFB;
 }
-#skillz {
-  width: 50%;
+.skillz {
+  width: 63%;
   font-size: 1.25rem;
   line-height: 2rem;
   letter-spacing: 1px;
-  color: #FD9EFB;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.skill {
+  padding: 3px 9px 3px 9px;
+  background-color: #FD9EFB;
+  border-radius: 15px;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-bottom: 15px;
 }
 .content {
   max-width: 100vw;
@@ -246,7 +256,7 @@ img {
     font-size: .75rem;
     line-height: 1rem;
   }
-  .hello-world, #skillz {
+  .hello-world, .skillz {
     font-size: 1rem;
     line-height: 1.5rem;
   }
@@ -261,7 +271,7 @@ img {
     width: 90%
   }
 
-  #skillz{
+  .skillz{
     width: 90%
   }
   .content {
@@ -330,11 +340,16 @@ img {
   .keen-slider__slide {
     height: 400px;
   }
+  .skillz {
+    font-size: .75rem;
+    line-height: 1rem;
+  }
 }
 @media (max-width: 650px) {
   #name-blast{
     font-size: 3rem;
   }
+
 }
 @media (max-width: 560px) {
   .gallery {
@@ -352,6 +367,7 @@ img {
   /* nav a {
     padding-top: 10px;
   } */
+
 }
 @media (max-width: 499px) {
   .container{
@@ -372,8 +388,11 @@ img {
     line-height: 1.5rem;
     padding: 9px 9px 9px 9px;
   }
-  #skillz{
+  .skillz{
+    justify-content: flex-start;
     align-self: flex-start;
+    width: 90%
+     
   }
   h1 {
     align-self: flex-start;
@@ -436,7 +455,7 @@ img {
     width: 20px;
     height: 20px
   }
-  .hello-world, #skillz, a {
+  .hello-world, .skillz, a {
     font-size: .75rem;
     line-height: 1rem;
   }
