--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,13 +50,14 @@ nav a {
   position: fixed;
   top: 0;
   z-index: 9999;
-  width: 100%;
+  width: 100vw;
   /* max-width: 100vw; */
   display: flex;
   justify-content: center;
   background-color: black;
   color: black;
   flex-wrap: wrap;
+  overflow: hidden;
 }
 div {
   letter-spacing: 1px;
@@ -201,13 +202,16 @@ img {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+
 }
 .gallery-container-left {
   margin-right: 10px;
+  width: 100%
   /* height: 100% */
 }
 .gallery-container-right {
   margin-left: 10px;
+  width: 100%
 }
 .inner-gallery {
   display: flex;
@@ -259,7 +263,7 @@ img {
 }
 
 .dot.active {
-  background: #000;
+  background: #22FFB6;
 }
 
 /* RESPONSIVE DESIGN */
@@ -304,24 +308,6 @@ img {
   .skillz{
     width: 90%
   }
-  /* .content {
-    flex-direction: column;
-    align-items: center;
-  }
-  .img {
-    margin-left: 0;
-    margin-right: 0;
-    width: 90%;
-  }
-  .project-name {
-    text-align: left;
-  }
-  .project-details {
-    margin-left: 0;
-    margin-right: 0;
-    padding-top: 20px;
-    width: 90%
-  } */
   .me {
     margin: 0px
   }
@@ -360,6 +346,9 @@ img {
     padding-top: 20px;
     width: 90%
   }
+  .dot {
+    margin: 0 5px;
+  }
 }
 @media (max-width: 900px){
   .navigation-wrapper {
@@ -370,6 +359,9 @@ img {
   }
   a {
     font-size: 1rem;
+  }
+  .dot {
+    margin: 0 4px;
   }
 }
 @media (max-width: 800px) {
@@ -412,9 +404,6 @@ img {
   .description, .tech {
     padding: 9px 9px 9px 9px;
   }
-  /* nav a {
-    padding-top: 10px;
-  } */
 
 }
 @media (max-width: 499px) {
@@ -439,12 +428,10 @@ img {
   .skillz{
     justify-content: flex-start;
     align-self: flex-start;
-    width: 90%
-     
+    width: 90%;
   }
   h1 {
     align-self: flex-start;
-
   }
   .content {
     align-items: flex-start;
@@ -457,36 +444,28 @@ img {
   ul {
     padding-left: 0;
   }
+  .arrow {
+    display: none;
+  }
+  .gallery-container-left, .gallery-container-right  {
+    margin: 0 0 25px 0
+  }
   .navigation-wrapper {
-    width: 350px;
+    width: 100%;
   }
   .keen-slider__slide {
-    height: 350px;
+    height: 100%;
   }
 }
-@media (max-width: 450px) {
-  .navigation-wrapper {
-    width: 300px;
-  }
-  .keen-slider__slide {
-    height: 300px;
-  }
-}
-@media (max-width: 400px) {
-  .navigation-wrapper {
-    width: 250px;
-  }
-  .keen-slider__slide {
-    height: 250px;
-  }
-}
+
+
 @media (max-width: 360px) {
   /* #name-blast {
     font-size: 1rem
   } */
-  .gallery {
+  /* .gallery {
     margin-top: 120px
-  }
+  } */
   .stay-put {
     font-size: 1rem;
   }
@@ -494,17 +473,26 @@ img {
     font-size: .75rem;
   }
   .navigation-wrapper {
-    width: 200px;
+    width: 325px;
   }
   .keen-slider__slide {
-    height: 200px;
+    height: 325px;
   }
-  .arrow {
-    width: 20px;
-    height: 20px
+  .dot {
+    padding: 4px;
+    width: 7px;
+    height: 7px;
   }
   .hello-world, .skillz, a {
     font-size: .75rem;
     line-height: 1rem;
+  }
+}
+@media (max-width: 320px) {
+  .dot {
+    padding: 3px;
+    width: 5px;
+    height: 5px;
+    margin: 0 3px;
   }
 }
