--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,6 @@ a {
   text-decoration: none;
   font-weight: bold;
   letter-spacing: 1px;
-  /* text-shadow: 2px 2px 2px chartreuse; */
   font-size: 1.25rem;
   overflow: hidden;
   padding: 3px 9px 3px 9px;
@@ -35,7 +34,6 @@ h2 {
   color: #FD9EFB;
 }
 nav {
-  /* padding-bottom: 15px; */
   padding-top: 15px;
 }
 nav a {
@@ -51,7 +49,6 @@ nav a {
   top: 0;
   z-index: 9999;
   width: 100vw;
-  /* max-width: 100vw; */
   display: flex;
   justify-content: center;
   background-color: black;
@@ -202,12 +199,10 @@ img {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-
 }
 .gallery-container-left {
   margin-right: 10px;
-  width: 100%
-  /* height: 100% */
+  width: 100%;
 }
 .gallery-container-right {
   margin-left: 10px;
@@ -235,12 +230,10 @@ img {
   width: 30px;
   height: 30px;
   position: relative;
-  /* top: 50%; */
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   fill: #FD9EFB;
   cursor: pointer;
-  /* margin: 10px; */
 }
 .dots {
   display: flex;
@@ -257,11 +250,9 @@ img {
   padding: 5px;
   cursor: pointer;
 }
-
 .dot:focus {
   outline: none;
 }
-
 .dot.active {
   background: #22FFB6;
 }
@@ -294,7 +285,6 @@ img {
     font-size: 1rem;
     line-height: 1.5rem;
   }
-  
 }
 @media (max-width: 1150px) {
   #name-blast{
@@ -304,7 +294,6 @@ img {
   .hello-world {
     width: 90%
   }
-
   .skillz{
     width: 90%
   }
@@ -392,7 +381,6 @@ img {
   #name-blast{
     font-size: 3rem;
   }
-
 }
 @media (max-width: 560px) {
   .gallery {
@@ -407,7 +395,6 @@ img {
   .description, .tech {
     padding: 9px 9px 9px 9px;
   }
-
 }
 @media (max-width: 499px) {
   .container{
@@ -450,9 +437,6 @@ img {
   .arrow {
     display: none;
   }
-  /* .gallery-container-left, .gallery-container-right  {
-    margin: 0 0 25px 0
-  } */
   .navigation-wrapper {
     width: 100%;
   }
@@ -460,15 +444,7 @@ img {
     height: 100%;
   }
 }
-
-
 @media (max-width: 360px) {
-  /* #name-blast {
-    font-size: 1rem
-  } */
-  /* .gallery {
-    margin-top: 120px
-  } */
   .stay-put {
     font-size: 1rem;
   }
