--- a/styles/globals.css
+++ b/styles/globals.css
@@ -309,14 +309,20 @@ img {
   .keen-slider__slide {
     height: 400px;
   }
+  .gallery {
+    flex-direction: column;
+  }
+  .gallery-container-left, .gallery-container-right  {
+    margin: 0 0 25px 0
+  }
 }
 @media (max-width: 1000px){
-  .navigation-wrapper {
+  /* .navigation-wrapper {
     width: 350px;
   }
   .keen-slider__slide {
     height: 350px;
-  }
+  } */
   .content {
     flex-direction: column;
     align-items: center;
@@ -340,12 +346,12 @@ img {
   }
 }
 @media (max-width: 900px){
-  .navigation-wrapper {
+  /* .navigation-wrapper {
     width: 300px;
   }
   .keen-slider__slide {
     height: 300px;
-  }
+  } */
   a {
     font-size: 1rem;
   }
@@ -365,6 +371,7 @@ img {
   }
   .navigation-wrapper {
     width: 400px;
+    margin: 0 15px 0 15px;
   }
   .keen-slider__slide {
     height: 400px;
@@ -438,10 +445,10 @@ img {
     display: none;
   }
   .navigation-wrapper {
-    width: 100%;
+    width: 350px;
   }
   .keen-slider__slide {
-    height: 100%;
+    height: 350px;
   }
 }
 @media (max-width: 360px) {
